removed unneccessary fields

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <base href="./">
+    <base href="/">
     <meta charset="UTF-8"/>
     <title>Chandni Thakkar</title>
     <meta name="description"
@@ -23,7 +23,7 @@
 
     <script>
       // The value below is injected by flutter build, do not touch.
-      const serviceWorkerVersion = "1757019025";
+      const serviceWorkerVersion = "1207356100";
     </script>
     <!-- This script adds the flutter initialization JS code -->
     <script src="flutter.js" defer=""></script>
